# a-i-d-e

./: .aiderc  .gitignore  .report.json  AIDE_TESTING_EVALUATION.md  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md  aide.py  check-aide.py  pyproject.toml  pytest.ini  todos.md
.agent/workflows/: use-aide.md
.github/workflows/: test.yml
aide/core/: context.py
docs/: setup-first-class-for-gemini.md
docs/architecture/: agent_local_intelligence.md  client_skill_discovery.md  context_provisioning.md  deterministic_execution.md  implementation_hole.md  lm_studio_client_integration.md  multi_agent_patterns.md
examples/: agent_refactoring.md
rule-presets/: use-aide-host.md  use-aide-subagent.md
scripts/: install_global.py  lmstudio_mcp_server.py
setup-files/claude-global-aide/: SKILL.md
setup-files/global-aide/: SKILL.md  gemini-extension.json
setup-files/project-injection/: SKILL.md  use-aide-host.md
tests/: .report.json  conftest.py
tests/core/: test_os_file_system_transactions.py
tests/features/: test_audit.py  test_change_signature.py  test_cleanup.py  test_extract.py  test_find_impact.py  test_generate_tests.py  test_implement_interface.py  test_implement_logic.py  test_kotlin_refactor.py  test_move_file.py  test_move_package.py  test_move_symbol.py  test_outline.py  test_project_dto.py  test_read.py  test_register_dependency.py  test_scaffold_feature.py  test_scaffold_mocks.py  test_smart_rename.py  test_testing_execution.py  test_usages.py  (+1 more)
workflows/: use-aide-host.md  use-aide-standalone.md  use-aide-tool.md  use-aide.md
(+63 files in other folders)
