[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aide-cli"
version = "0.1.0"
description = "Agent Interface for Deterministic Editing - A deterministic refactoring CLI for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "AIDE Contributors"}
]
dependencies = [
  "tree-sitter>=0.23.0",
  "tree-sitter-c-sharp>=0.23.0",
  "tree-sitter-rust>=0.23.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "typeguard"
]

[tool.setuptools]
packages = ["aide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
